--- a/views/video_header_recruteur.pug
+++ b/views/video_header_recruteur.pug
@@ -5,6 +5,7 @@ header#header
         video.embed-responsive-item(autoplay='autoplay' loop='loop' muted='muted')
           source(src='images/video_header_recruteur.mp4' type='video/mp4')
     .logo_wild
+        img.img-fluid(src='images/logo-recrut.png')
   .container-fluid.content_searchbar
     .row
       .col-12.col-lg-6.offset-lg-3.text-center.search_bar
