--- a/views/nav.pug
+++ b/views/nav.pug
@@ -2,13 +2,16 @@
 nav.navbar.navbar-expand-lg.fixed-top.navbar-light.cl-effect-5
   .container.position-relative
     a#log.navbar-brand(href='#')
-      img.img-fluid(src='images/wny-logo.jpg' alt='logo')
-      if page == 'developpeur'
-        a.navbar-recruteur(href='/recruteur')
-          span(data-hover='RECRUTEUR') RECRUTEUR
+      if page == 'recruteur'
+        img.img-fluid(src='images/logo-recrut.jpg' alt='logo')
       else
-        a.navbar-recruteur(href='/')
-          span(data-hover='DEVELOPPEUR') DEVELOPPEUR
+        img.img-fluid(src='images/wny-logo.jpg' alt='logo')
+      if page == "developpeur"
+          a.navbar-recruteur(href='/recruteur')
+            span(data-hover='RECRUTEUR') RECRUTEUR
+      else
+          a.navbar-recruteur(href='/')
+            span(data-hover='DEVELOPPEUR') DEVELOPPEUR
       // BURGER RESPONSIVE
       button.navbar-toggler(type='button' data-toggle='collapse' data-target='#navbarTogglerDemo02' aria-controls='navbarTogglerDemo02' aria-expanded='false' aria-label='Toggle navigation')
         span.navbar-toggler-icon
