style article id blog

--- a/views/blog_id.pug
+++ b/views/blog_id.pug
@@ -10,5 +10,4 @@ section#blog
                   = article.autor
             h4
               a= article.title
-            p
-              a= article.content
+            p!= article.content
