ajout emploi dans BDD

--- a/views/video_header.pug
+++ b/views/video_header.pug
@@ -14,7 +14,7 @@ header#header
                 input.custom-select(type='text' name="poste", placeholder="Language souhaite")
               .input-group
                 select.custom-select(name='Dpt')
-                  option(value='') Localisation
+                  option(value='') France entiere
                   optgroup(label='Alsace')
                     option(value='67')  Bas Rhin
                     option(value='68')  Haut Rhin
