--- a/views/admin_modal.pug
+++ b/views/admin_modal.pug
@@ -8,7 +8,7 @@ div.modal.modal-id
             span(aria-hidden='true') &times;
         |
         .modal-body
-          form(method='POST', action='')
+          form(method='POST', action='', enctype='multipart/form-data')
             |
             button.btn.btn-primary(type='submit') Envoyer
         |
