mise en forme vue AddEmploi

--- a/views/confirm_emploi.pug
+++ b/views/confirm_emploi.pug
@@ -4,13 +4,22 @@ block content
     header
         include nav.pug
     body
-        #confirm_emploi.container
-          .row
-            .col-8.offset-2.txt_confirm
+        #confirm_emploi
+          .row.container
+            .col-5.offset-2.txt_confirm
                 div
-                    p Votre demande vient d'être ajouté. Un mail vient d'être envoyé à l'administrateur. Une fois qu'elle sera validé, vous pourrez la voir sur le site. 
+                    p Wild Not You vous remercie de proposer une nouvelle missions. Nous vous confirmons que l'envoi s'est bel et bien passé. 
+                    p Notre administrateur vient d'être averti par mail. Apres éxamination de cette missions, elle sera publiée sur le site dans les plus brefs délais. 
+                    p Pour toutes autres demandes, vous trouverez les liens de contact dans le pied de page
+                        
                 div
-                    <a href="/" class="btn btn-primary btn-lg active text-right" role="button" aria-pressed="true">Primary link</a>
+                    <a href="/" class="btn btn-primary btn-md active btn_confirm_emploi" role="button" aria-pressed="true">Retour à l'acceuil</a>
+            .col-2.offset-3
+                div
+                    img.img-fluid(src='images/logo-dev.png')
+                div
+                 
+    
     footer
         include footer_collab.pug
         
