--- a/views/admin_modal.pug
+++ b/views/admin_modal.pug
@@ -8,9 +8,9 @@ div.modal.modal-id
             span(aria-hidden='true') &times;
         |
         .modal-body
-          form(method='POST', action='')
+          form(action='')
             |
-            button.btn.btn-primary(type='submit') Envoyer
+            button.btn.btn-primary#updateUser(type='submit', data-dismiss='modal') Envoyer
         |
         .modal-footer
           button.btn.btn-secondary(type='button', data-dismiss='modal') Fermer
