--- a/views/layout.pug
+++ b/views/layout.pug
@@ -24,7 +24,8 @@ head
     // BOOTRAP 4 AJAX
     script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js' integrity='sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q' crossorigin='anonymous')
     script(src='javascripts/slick.js', type='text/javascript', charset='utf-8')
-    script(src='javascripts/jquery.js', type='text/javascript', charset='utf-8', async='', defer='')
+    script(src='javascripts/script-admin.js', type='text/javascript', charset='utf-8', async='', defer='')
+    script(src='javascripts/script-ajax.js', type='text/javascript', charset='utf-8', async='', defer='')
     script(src='javascripts/script.js', type='text/javascript', charset='utf-8', async='', defer='')
     script.
       $(document).ready(function(){
