--- a/views/modal_ajout_ba.pug
+++ b/views/modal_ajout_ba.pug
@@ -18,6 +18,7 @@ div.modal.modal-id(id='modalAjoutBa')
             .form-group
               label Chiffres
               input#numbersAdd.form-control(type='text', placeholder='Chiffres')
+            button#btnAddBa.btn.btn-primary(type='submit',  data-dismiss='modal') Envoyer
         |
         .modal-footer
           button.btn.btn-secondary(type='button', data-dismiss='modal') Fermer
