--- a/views/layout.pug
+++ b/views/layout.pug
@@ -26,7 +26,7 @@ head
      // WYSIWIG textarea
     script(src='https://cloud.tinymce.com/stable/tinymce.min.js?apiKey=cnmcvbsufpfzpohpiarmg9vu38zaif909cyrb1vde3tisza1', type='text/javascript', charset='utf-8')
     script.
-      tinymce.init({ selector:'textarea' });
+      tinymce.init({mode : "specific_textareas",editor_selector : "mceEditor"});
     script(src='javascripts/slick.js', type='text/javascript', charset='utf-8')
     script(src='javascripts/jquery.js', type='text/javascript', charset='utf-8', async='', defer='')
     script(src='javascripts/script.js', type='text/javascript', charset='utf-8', async='', defer='')
