--- a/views/formulaire.pug
+++ b/views/formulaire.pug
@@ -16,21 +16,21 @@
           input#localisation(name='localisation', type='text', placeholder='L\'endroit idéal')
           span.tooltip Le lieu ne peut pas etre vide
       .row.formOffre
-        .col-6.col-sm-3
+        .col-6.col-sm-2
           label.form_col(for='recruteur') Entreprise :
-          input#recruteur(name='recruteur', type='text', placeholder='Votre nom d\'entreprise')
+          input#recruteur(name='recruteur', type='text', placeholder='Votre nom')
           span.tooltip Le champ entreprise ne peut pas &ecirc;tre vide
-        .col-6.col-sm-3
+        .col-6.col-sm-4
           label.form_col(for='diplome') Dipl&ocirc;me :
           input#diplome(name='diplome', type='text', placeholder='Le diplôme minimum souhaité')
           span.tooltip Le champ dipl&ocirc;me ne peut pas &ecirc;tre vide
-        .col-6.col-sm-3
+        .col-6.col-sm-4
           label.form_col(for='experience') Exp&eacute;rience :
           input#experience(name='experience', type='textarea', placeholder='L\'expérience qui fait la différence')
           span.tooltip Le champ exp&eacute;rience ne peut pas &ecirc;tre vide
-        .col-6.col-sm-3
+        .col-6.col-sm-2
           label.form_col(for='departement') Departement :
-          input#departement(name='departement', type='textarea', placeholder='00', maxlength='XXX')
+          input#departement(name='departement', type='textarea', placeholder='00', maxlength='3', pattern='{1,3}', required)
           span.tooltip Le champ dept ne peut être vide
       .row.formOffre
         .col-12.col-sm-6
