update layout vue

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -31,9 +31,9 @@ head
     script(src='javascripts/jquery.js', type='text/javascript', charset='utf-8', async='', defer='')
     script(src='javascripts/script.js', type='text/javascript', charset='utf-8', async='', defer='')
     script.
-      $(document).ready(function(){
-      $.get( "/footer", function( data ) {
-      $("#footer").html(data)
-      });
-      });
+      //- $(document).ready(function(){
+      //- $.get( "/footer", function( data ) {
+      //- $("#footer").html(data)
+      //- });
+      //- });
       
